logs/whatsappbot.log
Listing '.'...
Listing './bin'...
Compiling './bin/runxlrd.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bot'...
Compiling './lib/python3.5/site-packages/bot/main.py'...
***   File "./lib/python3.5/site-packages/bot/main.py", line 30
    print "base problem"
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/selenium'...
Listing './lib/python3.5/site-packages/selenium/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver'...
Listing './lib/python3.5/site-packages/selenium/webdriver/android'...
Listing './lib/python3.5/site-packages/selenium/webdriver/blackberry'...
Listing './lib/python3.5/site-packages/selenium/webdriver/chrome'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common/html5'...
Listing './lib/python3.5/site-packages/selenium/webdriver/edge'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/amd64'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/x86'...
Listing './lib/python3.5/site-packages/selenium/webdriver/ie'...
Listing './lib/python3.5/site-packages/selenium/webdriver/opera'...
Listing './lib/python3.5/site-packages/selenium/webdriver/phantomjs'...
Listing './lib/python3.5/site-packages/selenium/webdriver/remote'...
Listing './lib/python3.5/site-packages/selenium/webdriver/safari'...
Listing './lib/python3.5/site-packages/selenium/webdriver/support'...
Listing './lib/python3.5/site-packages/selenium-2.48.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/whatsappbot-0.0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/wheel'...
Listing './lib/python3.5/site-packages/wheel/signatures'...
Listing './lib/python3.5/site-packages/wheel/test'...
Listing './lib/python3.5/site-packages/wheel/test/complex-dist'...
Listing './lib/python3.5/site-packages/wheel/test/complex-dist/complexdist'...
Listing './lib/python3.5/site-packages/wheel/test/headers.dist'...
Listing './lib/python3.5/site-packages/wheel/test/simple.dist'...
Listing './lib/python3.5/site-packages/wheel/test/simple.dist/simpledist'...
Listing './lib/python3.5/site-packages/wheel/tool'...
Listing './lib/python3.5/site-packages/wheel-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/xlrd'...
Listing './lib/python3.5/site-packages/xlrd/doc'...
Listing './lib/python3.5/site-packages/xlrd/examples'...
Listing './lib/python3.5/site-packages/xlrd-0.9.4.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
